# EncodeUSBCameraVideo

./: CMakeLists.txt  README  VS_ENC_VA.cpp  VS_ENC_VA.h  main.c  main.cpp
